<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Money</string>
    <string name="app_spendingmoney">Spending Money</string>
    <string name="app_collectmoney">Collecting Money</string>
    <string name="app_historymoney">History Money</string>
    <string name="app_reportmoney">Report Money</string>
    <string name="app_accounttmoney">Account Money</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cmdSave">Save</string>
    <string name="cmdList">List</string>
    <string name="lblPrice">Price</string>
    <string name="lblDesciption">Description</string>
    <string name="lblDate">Date</string>
    <string name="lblAccount">Account</string>
    <string name="lblAccountName">Account Name</string>
    <string name="lblNumberPrice">Number Price</string>
    <string name="itemCollection">Collection</string>
    <string name="itemSpending">Spending</string>
    <string name="itemAccount">Account</string>
    <string name="itemHistory">History</string>
    <string name="itemBack">Back</string>
    <string name="itemExit">Exit</string>
    <string name="itemReport">Report</string>
    <string name="imgKey">Key</string>
    <string name="lblrpttoday">Report Money Today</string>
    <string name="lblrptweek">Report Money Day Of Month</string>
    <string name="lblrptmonth">Report Money Month Of Year</string>
	<string name="lblday">Day</string>
	<string name="lblmonth">Month</string>
</resources>